--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ export_presets.cfg
 12_CM_RPG  Cursor Triple Pack/Target.psd
 12_CM_RPG  Cursor Triple Pack/Walk.psd
 Assets/lots_of_verts.png
+Windows Build/
